add save-load state

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,6 +50,12 @@ body {
   position: relative;
 }
 
+.test {
+  width: 30px;
+  height: 30px;
+  background-color: blue;
+}
+
 .cell.selected::before {
   content: '';
   display: block;
