--- a/src/css/style.css
+++ b/src/css/style.css
@@ -50,10 +50,22 @@ body {
   position: relative;
 }
 
-.test {
-  width: 30px;
-  height: 30px;
-  background-color: blue;
+.center-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.scores {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 160px;
+  height: 60px;
+  border: 2px solid white;
+  color: white;
 }
 
 .cell.selected::before {
